// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. icondiamond sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
/>
`;

exports[`2. icontwitter sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={62.5}
/>
`;

exports[`3. iconvideo sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={86}
/>
`;

exports[`4. iconemail sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={68.75}
/>
`;

exports[`5. iconstar sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
/>
`;

exports[`6. iconfacebook sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={25}
/>
`;

exports[`7. thetimeslogo sets a width when height is set 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
/>
`;
